# problem-solving

codesprint/round2/: Analysis.ipynb  ClickRates.ipynb  NextCPR.ipynb  PlotTest.ipynb  Plot_Final.ipynb  media_count  media_count2  media_count_v2_2  media_count_v2_5  media_count_v2_7  view.py
facebook-hackercup/2015/: README.md
google-codejam/2015/: README.md
google-codejam/2015/r1c/: CMakeLists.txt
poj/: README.md
poj/1000/: 1089582_AC_0MS_24K.c  2112040_AC_0MS_12K.c  312968_AC_0MS_140K.c  470555_AC_15MS_140K.c  470557_AC_0MS_84K.cpp
poj/1002/: 1200686_AC_1326MS_7772K.cpp  1200689_AC_999MS_4600K.cc
poj/1003/: 608197_AC_0MS_112K.cpp
poj/1004/: 317431_AC_0MS_192K.c
poj/1005/: 608234_AC_0MS_124K.cpp
poj/1006/: 608344_AC_738MS_56K.c
poj/1007/: 1203920_AC_30MS_88K.cpp
poj/1028/: 3090290_AC_0MS_308K.cc  470094_AC_15MS_140K.c  530437_AC_0MS_140K.c
poj/1046/: 3089164_AC_0MS_296K.cc
poj/1056/: 3067132_AC_0MS_372K.cc
poj/1057/: 3066722_AC_0MS_404K.cc
poj/1068/: 2212549_AC_0MS_144K.cpp
poj/1080/: 3089198_AC_0MS_420K.cc
poj/1102/: 327115_AC_0MS_140K.c
poj/1132/: 3241922_AC_16MS_484K.cc
poj/1142/: 551706_AC_93MS_148K.c
poj/1163/: 1204349_AC_46MS_276K.cc
poj/1164/: 3239726_AC_0MS_380K.cc
poj/1166/: 3239236_AC_813MS_2516K.cc
poj/1207/: 327427_AC_31MS_140K.c
poj/1218/: 327417_AC_0MS_140K.c
poj/1250/: 3092530_AC_15MS_296K.cc
poj/1298/: 472919_AC_0MS_132K.c  472927_AC_0MS_132K.c
poj/1306/: 2141267_AC_0MS_84K.c
poj/1331/: 2141328_AC_0MS_228K.cc
poj/1406/: 2840560_AC_46MS_360K.cc  2840564_AC_31MS_360K.cc
(+462 files in other folders)
